# trig

./: .gitignore  CHANGELOG.md  Cargo.toml  GITHUB_SETTINGS.md  PUBLISHING.md  README.md
.github/workflows/: pull_request.yml
src/: f32_impl.rs  f64_impl.rs  lib.rs  module.rs  trig_trait.rs
