[package]
name = "todo-crate-name"
version = "0.1.0"
authors = ["Tamas Kis"]
edition = "2021"
description = "TODO_DESCRIPTION"
documentation = "https://docs.rs/TODO_CRATE_NAME"
repository = "https://github.com/TODO_USERNAME/TODO_REPO"
license = "MIT OR Apache-2.0"

exclude = ["Cargo.lock", ".github/", ".vscode/", ".gitignore"]

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "src/docs-header.html" ]

[dev-dependencies]
numtest = "0.1.6"
