[package]
name = "trig"
version = "0.1.2"
authors = ["Tamas Kis"]
edition = "2021"
description = "Complete set of trigonometric and hyperbolic functions in Rust."
documentation = "https://docs.rs/trig"
repository = "https://github.com/tamaskis/trig"
license = "MIT OR Apache-2.0"

exclude = ["Cargo.lock", ".github/", ".vscode/", ".gitignore"]

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "src/docs-header.html" ]

[dev-dependencies]
numtest = "0.1.6"
